--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<span class="holder">312</span>
+	<span class="item">312</span>
     <script type="text/javascript" src="./script.js">
 </script>
 
